2006-04-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* ecomplete.el (ecomplete-database-file-coding-system): New
	variable. 
	(ecomplete-save): Use it.
	(ecomplete-setup): Use it.

2006-04-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-self-insert-commands): New variable. 
	(message-strip-forbidden-properties): Use it.

2006-04-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-put-addresses-in-ecomplete): Use a regexp
	that doesn't make XEmacs choke.

2006-04-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-util.el (gnus-replace-in-string): Prefer
	replace-regexp-in-string over of replace-in-string.

2006-04-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-select-frame-set-input-focus): Use
	select-frame-set-input-focus if it is available in XEmacs; use
	definition defined in Emacs 22 for old Emacsen.

	* dgnushack.el: Autoload unmorse-region for XEmacs.

	* lpath.el: Bind cursor-in-non-selected-windows and
	select-frame-set-input-focus for XEmacs.

2006-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-inline-text): Use equal instead of equalp.

2006-04-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-cache-save): remove text
	properties when saving via the temp buffer

2006-04-18  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-generate-hashcash): Honor custom type.

2006-04-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-generate-hashcash): Default to non-nil when
	hashcash is found.

	* gnus-sum.el (gnus-summary-expire-articles-now): Clarify prompt.
	(gnus-refer-thread-limit): Increase default to 500.

	* mm-view.el (mm-inline-text): Supply delsp to flow-fill.

	* flow-fill.el (fill-flowed): Allow delete-space.

2006-04-18  Reiner Steib  <Reiner.Steib@gmx.de>

	* deuglify.el (gnus-outlook-deuglify-unwrap-min)
	(gnus-outlook-deuglify-unwrap-max, gnus-outlook-display-hook):
	Remove autoloads.

2006-04-18  Simon Josefsson  <jas@extundo.com>
