@@ -1,5 +1,11 @@
 2006-04-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* message.el (message-mail-alias-type): Doc fix.
+	(message-mail-alias-type-p): New function.
+	(message-send): Use it.
+	(message-mode): Ditto.
+	(message-strip-forbidden-properties): Ditto.
+
 	* ecomplete.el (ecomplete-database-file-coding-system): New
 	variable. 
 	(ecomplete-save): Use it.
